# Qt-CS-Sample

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: clientmainwindow.cpp.821330B87E522715.idx  clientmainwindow.h.4D636E6E90AF0A3A.idx  main.cpp.D1523E42D719A66B.idx  mainwindow.cpp.E4A59CCF393A2747.idx  mainwindow.h.3DC2004807F5FEE8.idx  servermainwindow.cpp.92980CF64849E919.idx
src/: main.cpp
src/client/: ClientMain.cpp  StandardClient.cpp  StandardClient.h  clientmainwindow.ui
src/client/ui/: clientmainwindow.cpp  clientmainwindow.h  clientmainwindow.ui
src/server/: MainServer.cpp  MainServer.h  ServerMain.cpp  servermainwindow.cpp  servermainwindow.h  servermainwindow.ui
src/server/ui/: servermainwindow.cpp  servermainwindow.h  servermainwindow.ui
